# Interview_Question4

./: .gitignore  README.md  basic_GMM.py  basic_SMM.py  basic_SMM_mcmc_posterior.py  basic_SMM_mcmc_prior.py  basic_batch_solve_perturbations.py  basic_common.py  basic_golden_vfi_finder.py  basic_identification_check.py  basic_simulation.py  basic_simulation_dist.py  basic_training_dynamic.py  effectiveness_dl_basic.sh  effectiveness_dl_risky.sh  effectiveness_dl_risky_policy.py  effectiveness_dl_risky_upgrade.sh  effectiveness_test_dl_basic.py  effectiveness_test_dl_risky.py  environment.yml  nohup.out  pyproject.toml  reconstruct_log.txt  reconstruct_results.py  risky_GMM.py  risky_SMM.py  risky_batch_solve_perturbations.py  risky_common.py  risky_ensemble_analysis.py  risky_ensemble_solver.py  risky_full_convergence_diagnostic.py  risky_golden_vfi_finder.py  risky_identification_check.py  risky_projection_simulation.py  risky_simulation.py  risky_simulation_dist.py  risky_training_dynamic.py  setup_cuda_env.sh  validate_basic_model.py  validate_risky_model.py
checkpoints/basic/: basic_policy_net_0.weights.h5  basic_policy_net_10.weights.h5  basic_policy_net_100.weights.h5  basic_policy_net_110.weights.h5  basic_policy_net_120.weights.h5  basic_policy_net_130.weights.h5  basic_policy_net_140.weights.h5  basic_policy_net_150.weights.h5  basic_policy_net_160.weights.h5  basic_policy_net_170.weights.h5  basic_policy_net_180.weights.h5  basic_policy_net_190.weights.h5  (+74 more)
ground_truth/: basic_model_vfi_results.npz  risky_debt_model_vfi_results.npz
result_effectiveness_dl_risky/: evaluation_summary.json
validate_vfi_basic/: validate_vfi_basic.py
validate_vfi_risky/: basic_vfi_results.npz  boundary_simulation.py  grid_convergence.py  visualization.py
(+725 files in other folders)
